manifests/OPA/constraint-imagetag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredImageTag
metadata:
  name: no-latest-images
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
